syntax = "proto3";

option java_package = "com.ica.tabletopassistant.data.odds";
option java_multiple_files = true;

message OddsFeatureConfig {
  bool is_enabled = 1;
  bool is_rounded = 2;
  int32 rounding_mode = 3;
  float attack = 4;
  float defend = 5;
}
